# fopilot

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: __init__.py  analytics.py  clients.py  imports.py  invoices.py  payments.py  projects.py  time_entries.py
backend/app/import_profiles/: generic.yaml  privatbank.yaml
backend/app/models/: __init__.py  bank_transaction.py  client.py  enums.py  exchange_rate.py  invoice.py  payment.py  project.py  time_entry.py
backend/app/repositories/: __init__.py  analytics.py  bank_transaction.py  base.py  client.py  exchange_rate.py  invoice.py  payment.py  project.py  time_entry.py
backend/app/schemas/: __init__.py  analytics.py  client.py  common.py  import_report.py  invoice.py  payment.py  project.py  time_entry.py
backend/app/services/: __init__.py  analytics.py  client_service.py  csv_import.py  exceptions.py  invoice_service.py  matching.py  nbu.py  payment_service.py  project_service.py  time_entry_service.py
backend/migrations/: env.py
backend/migrations/versions/: 4b6efe947d50_initial_schema.py  c9a07a53d4a5_add_payment_is_revenue_and_bank_.py  cdda692e2582_add_exchange_rate_source_date.py
backend/scripts/: nbu_rates_snapshot.json  seed.py
backend/tests/: conftest.py  test_analytics.py  test_crud_api.py  test_csv_import.py  test_exchange_rate.py  test_health.py  test_invoice_build.py  test_matching.py
backend/tests/fixtures/: generic_utf8.csv  match_uah.csv  (+1 more)
(+25 files in other folders)
