[project]
name = "fopilot-backend"
version = "0.1.0"
description = "FOPilot — облік і фінансова аналітика для ФОП (backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "pandas>=2.2",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "charset-normalizer>=3.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI relies on calling Depends()/Query() in argument defaults by design.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query"]

[tool.pytest.ini_options]
testpaths = ["tests"]
